--- a/docker/docker-compose-netCN-dgt-val-pbft.yaml
+++ b/docker/docker-compose-netCN-dgt-val-pbft.yaml
@@ -137,7 +137,7 @@ services:
       - validator-dgt
     command: |
       bash -c "
-        dgt keygen --force &&
+        dgt keygen --force ;ls -l /root/.dgt/keys &&
         tail -f /dev/null
       "
     stop_signal: SIGKILL
