--- a/dashboard/Dockerfile-bionic
+++ b/dashboard/Dockerfile-bionic
@@ -42,7 +42,7 @@ RUN apt-get install -y -q \
     python3-pyformance \
     python3-toml \
     python3-yaml \
-    python3-zmq python3-cbor python3-secp256k1
+    python3-zmq python3-cbor python3-secp256k1 python3-cryptography>=1.7.1
 
 RUN mkdir /var/log/sawtooth
 
