--- a/rest-api/Dockerfile-bionic
+++ b/rest-api/Dockerfile-bionic
@@ -45,7 +45,7 @@ RUN apt-get install -y -q \
     python3-toml \
     python3-yaml \
     python3-zmq  \
-    python3-secp256k1 \
+    python3-secp256k1 python3-cryptography>=1.7.1 \
     python3-cbor
 
 RUN mkdir /var/log/dgt
