--- a/docker/docker-compose-dashboard-dgt.yaml
+++ b/docker/docker-compose-dashboard-dgt.yaml
@@ -14,6 +14,7 @@ services:
     image: dashboard-dgt
     environment:
     - DGT_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/c1/dgt1:/project/peer  
@@ -30,7 +31,7 @@ services:
         cd dashboard
         python3 setup.py clean --all
         python3 setup.py build
-        dgt-dashboard -vv  --connect tcp://validator-dgt-c1-1:4104 --bind dashboard-dgt:8003
+        dgt-dashboard -vv  --connect tcp://validator-dgt-c1-1:4104 --bind dashboard-dgt:8003 -cb ${CRYPTO_BACK} 
       "
     stop_signal: SIGKILL
 
