--- a/docker/docker-compose-netCN-dgt-val-pbft.yaml
+++ b/docker/docker-compose-netCN-dgt-val-pbft.yaml
@@ -33,6 +33,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -41,8 +42,8 @@ services:
       - validator-dgt
     command: |
       bash -c "
-        cd families/settings;rm -f /project/peer/logs/settings-*.log*;
-        dgtadm node ${C} ${PNM}${N}
+        cd families/settings
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/settings-*.log*;
         python3 setup.py clean --all
         python3 setup.py build
         settings-tp -vv -C tcp://validator-${PNM}-${C}-${N}:${COMP}
@@ -62,6 +63,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     networks:
     - network1
     volumes:
@@ -72,8 +74,8 @@ services:
       - validator-dgt
     command: |
       bash -c "
-        cd families/bgt_python;rm -f /project/peer/logs/bgt-*.log*;
-        dgtadm node ${C} ${PNM}${N}
+        cd families/bgt_python;
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/bgt-*.log*;
         python3 setup.py clean --all
         python3 setup.py build
         bgt-tp-python -vv -C tcp://validator-${PNM}-${C}-${N}:${COMP}
@@ -94,6 +96,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     networks:
     - network1
     volumes:
@@ -104,11 +107,44 @@ services:
       - validator-dgt
     command: |
       bash -c "
-        cd families/smart_stuff;rm -f /project/peer/logs/stuff-*.log*;
-        dgtadm node ${C} ${PNM}${N}
+        cd families/smart_stuff;
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/stuff-*.log*;
         python3 setup.py clean --all
         python3 setup.py build
         stuff-tp -vv -C tcp://validator-${PNM}-${C}-${N}:${COMP}
+      "
+    stop_signal: SIGKILL
+
+
+  xcert-tp:
+    build:
+      context: ..
+      dockerfile: families/x509_cert/Dockerfile-${DISTR}
+      args:
+        - http_proxy
+        - https_proxy
+        - no_proxy
+        - DGT_TOP=bgx
+    image: xcert-tp-${PNM}:${ISOLATION_ID}
+    environment:
+    - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
+    - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
+    networks:
+    - network1
+    volumes:
+      - ..:/project/${DGT_TOP}
+      - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
+    container_name: xcert-tp-${PNM}-${C}-${N}
+    depends_on:
+      - validator-dgt
+    command: |
+      bash -c "
+        cd families/x509_cert;
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/xcert-*.log*;
+        python3 setup.py clean --all
+        python3 setup.py build
+        xcert-tp -vv -C tcp://validator-${PNM}-${C}-${N}:${COMP}
       "
     stop_signal: SIGKILL
 
@@ -129,6 +165,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -162,6 +199,7 @@ services:
     - SINGLE=${SINGLE}
     - NETWORK=${NETWORK}
     - PCONTROL=${PCONTROL}
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -174,19 +212,20 @@ services:
       - ${COMP}:${COMP}
       - ${NET}:${NET}
     # start the validator with an empty genesis batch sawtooth.consensus.algorithm=devmode and ADD sawtooth.consensus.version=0.1 /root/.dgt/keys/my_key.priv
+    # dgtset genesis -k /project/peer/keys/validator.priv -A $$(cat /project/${DGT_TOP}/clusters/c1/${PNM}1/keys/validator.pub) -A $$(cat /project/peer/keys/validator.pub)
     command: |
       bash -c "
         bin/protogen
         if [ -z ${PEERS} ]; then echo 'ONE HOST MODE'; else echo 'MANY HOST MODE (${PEERS})';add_peers.sh '${PEERS}'; fi
         cd validator
-        python3 setup.py clean --all
-        python3 setup.py build
-        dgtadm node ${C} ${PNM}${N};dgtadm keygen;ls -l /project/peer;
+        echo python3 setup.py clean --all;echo python3 setup.py build;
+        ls -l /project/peer/keys;
+        dgtadm node ${C} ${PNM}${N} -t ${PEERING} -cb ${CRYPTO_BACK} ;ls -l /project/peer/keys;dgtadm keygen -cb ${CRYPTO_BACK};
         if [ ${G} == 'Y' ]; then rm -f /project/peer/data/*; else echo 'RESTART MODE'; fi; rm -f /project/peer/logs/validator*.log* /project/peer/logs/interc*.log* ;
-        dgt keygen my_key;
+        dgt keygen my_key  -cb ${CRYPTO_BACK};
         echo 'GATEWAY=${SEEDS},PEERING=${PEERING},NETWORK=${NETWORK},SIGNED=${SIGNED}'
-        dgtset proposal create -k /project/peer/keys/validator.priv -o dgtset.batch $$(cat /project/peer/etc/dgt.conf)
-        dgtset genesis -k /project/peer/keys/validator.priv -A $$(cat /project/${DGT_TOP}/clusters/c1/${PNM}1/keys/validator.pub) -A $$(cat /project/peer/keys/validator.pub)
+        dgtset proposal create -k /project/peer/keys/validator.priv -o dgtset.batch $$(cat /project/peer/etc/dgt.conf) --crypto_back ${CRYPTO_BACK} 
+        dgtset genesis -k /project/peer/keys/validator.priv -cb ${CRYPTO_BACK} -A /project/${DGT_TOP}/clusters/c1/${PNM}1/keys/validator.pub.${CRYPTO_BACK} -A /project/peer/keys/validator.pub
         if [ ${G} == 'Y' ]; then dgtadm genesis config-genesis.batch  dgtset.batch;echo 'GENESIS MODE'; else echo 'RESTART MODE'; fi
         validator-dgt -vv  \
             --endpoint tcp://validator-${PNM}-${C}-${N}:${NET} \
@@ -213,6 +252,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -226,8 +266,8 @@ services:
     # opentsdb-url-off  -- SWITCH OFF metrics
     command: |
       bash -c "
-        cd rest-api;rm -f /project/peer/logs/rest-api*.log*;
-        dgtadm node ${C} ${PNM}${N}
+        cd rest-api;
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/rest-api*.log*;
         python3 setup.py clean --all
         python3 setup.py build
         dgt-rest-api -vv --connect tcp://validator-${PNM}-${C}-${N}:${COMP} --bind api-${PNM}-${C}-${N}:${API} --opentsdb-url-off http://bgx-stats-influxdb:8086 --opentsdb-db metrics --opentsdb-username lrdata --opentsdb-password pwlrdata
@@ -250,6 +290,7 @@ services:
     environment:
     - DGT_HOME=/project/${DGT_TOP}/clusters/${C}/${PNM}${N}
     - PEER_HOME=/project/peer
+    - CRYPTO_BACK=${CRYPTO_BACK}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
@@ -259,8 +300,8 @@ services:
     #  - bgx-registry
     command: |
       bash -c "
-        cd consensus/dgt_pbft;rm -f /project/peer/logs/pbft*.log*;
-        dgtadm node ${C} ${PNM}${N}
+        cd consensus/dgt_pbft;
+        dgtadm node ${C} ${PNM}${N} -cb ${CRYPTO_BACK};rm -f /project/peer/logs/pbft*.log*;
         python3 setup.py clean --all
         python3 setup.py build
         dgt-pbft -vv ${SIGNED} --connect tcp://validator-${PNM}-${C}-${N}:${CONS} --component tcp://validator-${PNM}-${C}-${N}:${COMP}
