--- a/telebot/Dockerfile-bionic
+++ b/telebot/Dockerfile-bionic
@@ -48,7 +48,7 @@ RUN apt-get install -y -q \
     python3-toml \
     python3-yaml \
     python3-zmq  \
-    python3-secp256k1 \
+    python3-secp256k1 python3-cryptography>=1.7.1 \
     python3-cbor
 
 RUN pip3  install pytelegrambotapi
