proto notary dirs

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,6 @@
 /families/smallbank/smallbank_rust/target/
 /families/smallbank/smallbank_rust/Cargo.lock
 /families/smallbank/smallbank_rust/bin/
-
 /coverage
 /coverage/html
 /**/.coverage
@@ -151,3 +150,38 @@
 *.vtg
 *.vpwhistu
 bin/vault
+bgx/consensus/bgx_pbft/bgx_pbft_common/protobuf
+consensus/dgt_pbft/pbft/config/__pycache__/
+consensus/dgt_pbft/pbft/consensus/__pycache__/
+consensus/dgt_pbft/pbft/database/__pycache__/
+consensus/dgt_pbft/pbft/journal/__pycache__/
+consensus/dgt_pbft/pbft/journal/consensus/__pycache__/
+consensus/dgt_pbft/pbft/state/__pycache__/
+consensus/dgt_pbft/pbft_common/__pycache__/
+consensus/dgt_pbft/pbft/__pycache__/
+consensus/dgt_pbft/pbft_common/protobuf/
+consensus/dgt_pbft/pbft_common/validator_registry_view/__pycache__/
+consensus/dgt_pbft/pbft_engine/__pycache__/
+dashboard/dgt_rest_api/__pycache__/
+dashboard/dgt_rest_api/protobuf/
+telebot/bgt_bot_api/__pycache__/
+validator/dgt_validator/protobuf/
+sawtooth/signing/sawtooth_signing/__pycache__/
+sawtooth/sdk/python/sawtooth_sdk/__pycache__/
+sawtooth/sdk/python/sawtooth_sdk/consensus/__pycache__/
+sawtooth/sdk/python/sawtooth_sdk/messaging/__pycache__/
+sawtooth/sdk/python/sawtooth_sdk/processor/__pycache__/
+sawtooth/sdk/python/sawtooth_sdk/protobuf/
+rest-api/dgt_rest_api/__pycache__/
+rest-api/dgt_rest_api/protobuf/
+sawtooth/cli/sawtooth_cli/__pycache__/
+sawtooth/cli/sawtooth_cli/admin_command/__pycache__/
+sawtooth/cli/sawtooth_cli/protobuf/
+sawtooth/families/block_info/sawtooth_block_info/protobuf/
+sawtooth/families/identity/sawtooth_identity/protobuf/
+sawtooth/families/settings/sawtooth_settings/__pycache__/
+sawtooth/families/settings/sawtooth_settings/protobuf/
+sawtooth/rest_api/sawtooth_rest_api/protobuf/
+sdk/python/dgt_sdk/protobuf/
+notary-api/dgt_notary_api/__pycache__/
+families/settings/dgt_settings/protobuf/
