add proto clusters

--- a/.gitignore
+++ b/.gitignore
@@ -186,3 +186,4 @@ sdk/python/dgt_sdk/protobuf/
 notary-api/dgt_notary_api/__pycache__/
 families/settings/dgt_settings/protobuf/
 families/dec_dgt/dec_common/
+cli/dgt_cli/protobuf/
