--- a/dashboard/Dockerfile-bionic
+++ b/dashboard/Dockerfile-bionic
@@ -32,7 +32,8 @@ RUN echo "deb http://repo.sawtooth.me/ubuntu/ci bionic universe" >> /etc/apt/sou
 RUN apt-get update && apt-get install -y -q  \
     git \
     python3 \
-    python3-stdeb 
+    python3-stdeb \
+    python3-pip   
 
 RUN apt-get install -y -q \
     python3-grpcio \
