--- a/docker/docker-compose-netCN-dgt-dec.yaml
+++ b/docker/docker-compose-netCN-dgt-dec.yaml
@@ -205,6 +205,7 @@ services:
     - PEER_HOME=/project/peer
     - CRYPTO_BACK=${CRYPTO_BACK}
     - DGT_TOP=${DGT_TOP}
+    - HTTPS_MODE=${HTTPS_MODE}
     volumes:
       - ..:/project/${DGT_TOP}
       - ../../dgt_clust/${C}/${PNM}${N}:/project/peer
