--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ ISOLATION_ID=latest
 INSTALL_TYPE=-local
 DGT_TOP=dgt
 DISTR=bionic
+DISTRN=groovy
 BOT_TOKEN=1205652427:AAFr0eynwihWGyvObUA0QSjOfKMwiH3HkZs
 VAULT_URL=http://vault:8200
 VAULT_PORT=8200
