--- a/dashboard/Dockerfile-focal
+++ b/dashboard/Dockerfile-focal
@@ -31,26 +31,34 @@ RUN apt-get install -y -q \
     net-tools curl gcc autoconf cmake libtool 
       
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \ 
-    python3  python3-pip
+    python3  python3-stdeb python3-pip
     
 RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \                                                            
-    python3-aiodns \                                                                    
-    python3-aiohttp  \                                          
+     \                                                                    
+      \                                          
     python3-colorlog \                                                                  
     python3-toml \                                                                      
     python3-yaml \                                                                      
     python3-zmq \
     python3-cbor  \
     python3-cryptography>=1.7.1  
-											
 
+RUN apt-get install -y -q \
+    python3-grpcio \
+    python3-protobuf 
+    
 
-#python3-aiohttp-security
+					       
+
+#python3-aiohttp-security python3-grpcio-tools python3-aiohttp python3-aiodns
 #ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
+RUN pip3 install grpcio-tools
 RUN pip3 install pyformance
 RUN pip3 install chardet
 RUN pip3 install secp256k1
 RUN pip3 install pysha3
+RUN pip3 install aiodns
+RUN pip3 install aiohttp
 RUN pip3 install aiohttp_security[session]
 RUN mkdir /var/log/sawtooth
 
