--- a/dashboard/Dockerfile-focal
+++ b/dashboard/Dockerfile-focal
@@ -12,54 +12,61 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 # -------------===  build ===-------------
-
-FROM ubuntu:20.04
+# export DEBIAN_FRONTEND=noninteractive &&
+FROM ubuntu:jammy
 ARG DGT_TOP
-ARG DEBIAN_FRONTEND=noninteractive
+#ARG DEBIAN_FRONTEND=noninteractive
+#ARG export TZ="Asia/Novosibirsk"
+#FROM python:3.9.5 as python-base
 RUN apt-get update && apt -y upgrade && apt-get install gnupg -y
 
 
-RUN apt-get install  --no-install-recommends -y \
+RUN export DEBIAN_FRONTEND=noninteractive && apt-get install  --no-install-recommends -y \
     build-essential \
     cron            \
     coreutils  \
     procps 
 
-RUN apt-get install -y -q \
+RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \
     git apt-utils \
     iputils-ping\
     net-tools curl gcc autoconf cmake libtool 
-      
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \ 
-    python3  python3-stdeb python3-pip
-    
-RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \                                                            
-     \                                                                    
-      \                                          
-    python3-colorlog \                                                                  
-    python3-toml \                                                                      
-    python3-yaml \                                                                      
-    python3-zmq \
-    python3-cbor  \
-    python3-cryptography>=1.7.1  
+     
+#RUN  export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q  python3-pip    
+#RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q python3.9 && python3 -V
 
-RUN apt-get install -y -q \
-    python3-grpcio \
-    python3-protobuf 
+#RUN  apt-get install -y -q \
+#    python3-stdeb \
+#    python3-pip
+
+    
+#RUN export DEBIAN_FRONTEND=noninteractive && apt-get install -y -q \                                                            
+#    python3-colorlog \                                                                  
+#    python3-toml \                                                                      
+#    python3-yaml \                                                                      
+#    python3-zmq \
+#    python3-cbor  \
+#    python3-cryptography>=1.7.1  
+
+#RUN apt-get install -y -q \
+#    python3-grpcio \
+#    python3-protobuf 
     
 
 					       
 
 #python3-aiohttp-security python3-grpcio-tools python3-aiohttp python3-aiodns
 #ENV PATH="$POETRY_HOME/bin:$VENV_PATH/bin:$PATH"
-RUN pip3 install grpcio-tools
-RUN pip3 install pyformance
-RUN pip3 install chardet
-RUN pip3 install secp256k1
-RUN pip3 install pysha3
-RUN pip3 install aiodns
-RUN pip3 install aiohttp
-RUN pip3 install aiohttp_security[session]
+
+#RUN pip3 install grpcio-tools
+#RUN pip3 install pyformance
+#RUN pip3 install chardet
+#RUN pip3 install secp256k1
+#RUN pip3 install pysha3
+#RUN pip3 install aiodns
+#RUN pip3 install aiohttp
+#RUN pip3 install aiohttp_security[session]
+
 RUN mkdir /var/log/sawtooth
 
 ENV PATH=$PATH:/project/$DGT_TOP/bin:
