--- a/docker/docker-compose-dashboard-dgt-new.yaml
+++ b/docker/docker-compose-dashboard-dgt-new.yaml
@@ -25,7 +25,7 @@ services:
         - https_proxy
         - no_proxy
         - DGT_TOP=${DGT_TOP}
-    image: dashboard-dgt-new
+    image: dashboard-dgt-jammy
     environment:
     - DGT_HOME=/project/peer
     - CRYPTO_BACK=${CRYPTO_BACK}
@@ -43,11 +43,12 @@ services:
     #   - validator 18.222.233.160
     command: |
       bash -c "
-        bin/protogen
+        echo bin/protogen
         cd dashboard
-        python3 setup.py clean --all
-        python3 setup.py build
-        dgt-dashboard -vv  --connect tcp://validator-dgt-c1-1:4104 --bind dashboard-dgt:8003 -cb ${CRYPTO_BACK} ${HTTPS_MODE}
+        echo python3 setup.py clean --all
+        echo python3 setup.py build
+        echo dgt-dashboard -vv  --connect tcp://validator-dgt-c1-1:4104 --bind dashboard-dgt:8003 -cb ${CRYPTO_BACK} ${HTTPS_MODE}
+        tail -f /dev/null
       "
     stop_signal: SIGKILL
 
