--- a/.env
+++ b/.env
@@ -17,6 +17,8 @@ INSTALL_TYPE=-local
 DGT_TOP=dgt
 DISTR=bionic
 DISTRN=focal
+DISTRJM=jammy
+CRYPTO_BACK=openssl
 BOT_TOKEN=1205652427:AAFr0eynwihWGyvObUA0QSjOfKMwiH3HkZs
 VAULT_URL=http://vault:8200
 VAULT_PORT=8200
